<resources>

    <string name="app_name">Express Help</string>
    <string name="need_help_view_header">Need Express Help</string>
    <string name="need_relief_view_header">Relief Details</string>
    <string name="provide_help_view_header">Provide Help</string>
    <string name="be_volunteer_view_header">Confirm your detail</string>
    <string name="material_help_provider_view_header">Provide Materials</string>
    <string name="financial_help_provider_view_header">Provide Finance</string>
    <string name="about_view_header">About Us</string>
    <string name="support_view_header">Support us</string>

    <string name="lbl_need_help">Need Help</string>
    <string name="lbl_provide_help">Provide Help</string>

    <string name="lbl_location">Your Location</string>
    <string name="lbl_people_stats">Num of people affected</string>

    <string name="hint_home_num">home number</string>
    <string name="hint_street_name">stree name</string>
    <string name="hint_division">division/locality</string>
    <string name="hint_city">city</string>


    <string name="hint_num_total_people">number of total people</string>
    <string name="hint_num_seniors">number of old aged people</string>
    <string name="hint_num_child">number of child</string>

    <string name="lbl_need_rescue">Need Rescue</string>
    <string name="lbl_need_relief">Need Relief</string>

    <string name="lbl_need_relief_basic">Basic Needs</string>

    <string name="need_food">Food</string>
    <string name="need_water">Water</string>
    <string name="need_clothes">Clothes</string>

    <string name="lbl_need_relief_special">Other/Special Needs</string>

    <string name="need_milk">Milk</string>
    <string name="need_baby_food">Baby Food</string>



    <string name="need_clothes_female">Female underwear</string>
    <string name="need_clothes_male">Male underwear</string>
    <string name="hint_special_needs">any other special needs?</string>

    <string name="lbl_need_medicine">Medicine</string>
    <string name="hint_medicine">details of medicine</string>


    <string name="lbl_need_personal_cleanliness">Personal Health/Cleaning</string>


    <string name="need_sanitary">Sanitary Pads</string>
    <string name="need_baby_diapers">Baby Diapers</string>
    <string name="need_soaps">Soaps</string>
    <string name="need_hand_wash">Hand Wash</string>
    <string name="need_phenyl">Phenyl</string>


    <string name="need_other_extra">describe anything else here</string>


    <string name="lbl_financial_help">Provide Financial Help</string>
    <string name="lbl_material_help">Provide Material Help</string>
    <string name="lbl_become_volunteer">Become a volunteer</string>

    <string name="lbl_start_date">Arrival/Start Date</string>
    <string name="lbl_end_date">Departure/End Date</string>
    <string name="accom_need">Require accommodation</string>
    <string name="work_alone">Work Alone</string>
    <string name="work_team">Work in a team</string>
    <string name="lbl_confirm_volunteer">Confirm</string>

    <string name="chk_provide_food">Food</string>
    <string name="chk_provide_medicine">Medicine</string>
    <string name="chk_provide_water">Water</string>
    <string name="chk_provide_baby_food">Baby Food</string>
    <string name="chk_provide_milk">Milk</string>
    <string name="chk_provide_toiletries">Toiletries</string>
    <string name="chk_provide_clothes">Clothes (General)</string>
    <string name="chk_provide_female_clothes">Female underwear</string>
    <string name="chk_provide_male_clothes">Male underwear</string>
    <string name="lbl_provide_detail">Provide details, if any</string>
    <string name="btn_confirm_mat_help">Confirm</string>

    <string name="btn_pay_external">Payment Gateway</string>

    <string name="lbl_account_detail">Provide account detail</string>
    <string name="hint_amount">provide donation amount</string>
    <string name="hint_account_name">account name</string>
    <string name="hint_account_num">account number</string>
    <string name="hint_bank_name">bank name</string>
    <string name="hint_bank_branch_name">branch name</string>
    <string name="hint_bank_branch_address">branch address</string>
    <string name="hint_bank_branch_city">branch city</string>
    <string name="hint_bank_branch_state">branch state</string>
    <string name="btn_confirm_pay_detail">Confirm Donation</string>



    <string name="menu_main_page">Main Page</string>
    <string name="menu_need_help">Need Help</string>
    <string name="menu_provide_help">Provide Help</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_support">Support</string>

    <string name="email_phone_hint">provide your email or phone</string>

    <string name="lbl_email">Our email</string>
    <string name="lbl_phone">Our Phone</string>


</resources>
