<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/action_main"
        android:orderInCategory="101"
        android:title="@string/menu_main_page"
        android:showAsAction="collapseActionView"/>

    <item android:id="@+id/action_need_help"
        android:orderInCategory="102"
        android:title="@string/menu_need_help"
        android:showAsAction="collapseActionView"/>

    <item android:id="@+id/action_provide_help"
        android:orderInCategory="103"
        android:title="@string/menu_provide_help"
        android:showAsAction="collapseActionView"/>

    <item android:id="@+id/action_about"
        android:orderInCategory="104"
        android:title="@string/menu_aboutus"
        android:showAsAction="collapseActionView"/>

    <item android:id="@+id/action_support"
        android:orderInCategory="105"
        android:title="@string/menu_support"
        android:showAsAction="collapseActionView"/>

</menu>