<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_phone_hint"
        android:id="@+id/email_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_phone"
        android:text="@string/chk_provide_food"
        android:id="@+id/chk_provide_food"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/chk_provide_food"
        android:text="@string/chk_provide_water"
        android:id="@+id/chk_provide_water"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/chk_provide_water"
        android:text="@string/chk_provide_clothes"
        android:id="@+id/chk_provide_clothes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/chk_provide_clothes"
        android:text="@string/chk_provide_medicine"
        android:id="@+id/chk_provide_medicine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/chk_provide_medicine"
        android:text="@string/chk_provide_baby_food"
        android:id="@+id/chk_provide_baby_food"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/chk_provide_baby_food"
        android:text="@string/chk_provide_milk"
        android:id="@+id/chk_provide_milk"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/chk_provide_milk"
        android:text="@string/chk_provide_toiletries"
        android:id="@+id/chk_provide_toiletries"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/chk_provide_toiletries"
        android:text="@string/chk_provide_female_clothes"
        android:id="@+id/chk_provide_female_clothes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/chk_provide_female_clothes"
        android:text="@string/chk_provide_male_clothes"
        android:id="@+id/chk_provide_male_clothes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_provide_detail"
        android:textStyle="bold"
        android:textSize="@dimen/text_label_size"
        android:text="@string/lbl_provide_detail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/chk_provide_male_clothes"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/provide_txt_detail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lbl_provide_detail"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm_mat_help"
        android:id="@+id/btn_confirm_mat_help"
        android:layout_below="@+id/provide_txt_detail"
        android:layout_centerHorizontal="true" />



</RelativeLayout>