<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".views.apptasks.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/need_help_scrollView"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">\

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_location"
                android:textStyle="bold"
                android:textSize="@dimen/text_label_size"
                android:id="@+id/lbl_location" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/home_number"
                android:layout_below="@+id/lbl_location"
                android:hint="@string/hint_home_num"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/street_name"
                android:layout_below="@+id/lbl_location"
                android:hint="@string/hint_street_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/division"
                android:layout_below="@+id/street_name"
                android:hint="@string/hint_division"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:layout_below="@+id/division"
                android:hint="@string/hint_city"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_people_stats"
                android:textStyle="bold"
                android:textSize="@dimen/text_label_size"
                android:id="@+id/lbl_people_stats" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/num_total_people"
                android:layout_below="@+id/lbl_people_stats"
                android:hint="@string/hint_num_total_people"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/num_old_people"
                android:layout_below="@+id/num_total_people"
                android:hint="@string/hint_num_seniors"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/num_child"
                android:layout_below="@+id/num_old_people"
                android:hint="@string/hint_num_child"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_need_rescue"
                android:id="@+id/btn_need_rescue"
                android:layout_below="@+id/num_child"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_need_relief"
                android:id="@+id/btn_need_relief_step1"
                android:layout_below="@+id/btn_need_rescue"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>
    </ScrollView>




</RelativeLayout>