<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".views.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/need_relief_scrollView"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">\

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_need_relief_basic"
                android:textStyle="bold"
                android:textSize="@dimen/text_label_size"
                android:id="@+id/lbl_location" />

            <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">\
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_food"
                    android:layout_below="@+id/lbl_need_relief_basic"
                    android:checked="true"
                    android:id="@+id/chk_food" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_water"
                    android:layout_below="@+id/chk_food"
                    android:checked="true"
                    android:id="@+id/chk_water" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_clothes"
                    android:layout_below="@+id/chk_water"
                    android:checked="true"
                    android:id="@+id/chk_clothes" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_need_relief_special"
                android:textStyle="bold"
                android:textSize="@dimen/text_label_size"
                android:id="@+id/lbl_special_need" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">\

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_milk"
                    android:id="@+id/chk_milk" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_baby_food"
                    android:layout_below="@+id/chk_milk"
                    android:id="@+id/chk_baby_food" />

            </LinearLayout>

            <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">\


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_clothes_female"
                    android:id="@+id/chk_clothes_female" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_clothes_male"
                    android:layout_below="@+id/chk_clothes_female"
                    android:id="@+id/chk_clothes_male" />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">\

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_special_needs"
                    android:ems="20"
                    android:id="@+id/detail_special_needs"
                    android:layout_below="@+id/chk_clothes_male"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_need_medicine"
                android:textStyle="bold"
                android:textSize="@dimen/text_label_size"
                android:id="@+id/lbl_medicine" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">\

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_medicine"
                    android:ems="20"
                    android:id="@+id/detail_medicine"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_need_personal_cleanliness"
                android:textStyle="bold"
                android:textSize="@dimen/text_label_size"
                android:id="@+id/lbl_toiletries" />



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">\
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_sanitary"
                    android:id="@+id/chk_sanitary" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_baby_diapers"
                    android:layout_below="@+id/chk_sanitary"
                    android:id="@+id/chk_diapers" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_soaps"
                    android:layout_below="@+id/chk_diapers"
                    android:id="@+id/chk_soaps" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">\
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_hand_wash"
                    android:id="@+id/chk_hand_wash" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_phenyl"
                    android:layout_below="@+id/chk_hand_wash"
                    android:id="@+id/chk_phenyl" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">\

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/need_other_extra"
                    android:ems="20"
                    android:id="@+id/extra_needs"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_need_relief"
                android:id="@+id/btn_need_relief_step2"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>
    </ScrollView>



</RelativeLayout>