<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_start_date"
        android:textStyle="bold"
        android:textSize="@dimen/text_label_size"
        android:id="@+id/btn_volun_start_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_start_date"
        android:textStyle="bold"
        android:textSize="@dimen/text_label_size"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/btn_volun_start_date"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_start_date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_end_date"
        android:textStyle="bold"
        android:textSize="@dimen/text_label_size"
        android:id="@+id/btn_volun_end_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_end_date"
        android:textStyle="bold"
        android:textSize="@dimen/text_label_size"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/btn_volun_end_date"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_end_date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_confirm_volunteer"
        android:textStyle="bold"
        android:textSize="@dimen/text_label_size"
        android:id="@+id/btn_confirm_volunt" />




</RelativeLayout>